# seekdb

./: .akfarm  .gitattributes  .gitignore  CMakeLists.txt  FAQ.md  Internal_Tables_Guide.md  README.md  README_CN.md  build.sh
.github/script/: seekdb_wait_result.py
.github/script/seekdb/: collect_result.sh  compile.sh  mysqltest_slice.sh  prepare.sh
.github/workflows/: build-libseekdb.yml  compile.yml  seekdb-farm2.yml  seekdb.yml
.github/workflows/buildbase/: action.yml
cmake/: Env.cmake  android_compat.h
docs/developer-guide/en/: android.md  debug.md  homebrew.md  toolchain.md
docs/developer-guide/zh/: debug.md  homebrew.md  toolchain.md
mittest/mtlenv/: mock_tenant_module_env.h
mittest/multi_replica/env/: ob_simple_replica.cpp
mittest/simple_server/: CMakeLists.txt
mittest/simple_server/env/: ob_simple_server.cpp
mittest/simple_server/rootservice/: test_max_id_cache.cpp
package/libseekdb/: README.md  libseekdb-build.sh  osx_import_codesign_certificate.sh
rag/: eval.py  requirements.txt
rag/data/: answer.json  questions.json
rpm/: oceanbase.spec
src/: CMakeLists.txt
src/include/: CMakeLists.txt  seekdb.cpp  seekdb.h  seekdb.version  seekdb_export.txt
src/logservice/archiveservice/: ob_archive_sender.cpp
src/logservice/logfetcher/: ob_log_fetch_log_rpc.cpp  ob_log_fetcher_err_handler.h  ob_log_grpc_client.h  ob_log_rpc.h
src/logservice/logrouteservice/: ob_log_route_key.cpp  ob_log_route_key.h  ob_log_route_service.cpp  ob_log_route_service.h  ob_log_route_struct.cpp  ob_log_route_struct.h  ob_log_systable_queryer.cpp  ob_log_systable_queryer.h  ob_ls_log_stat_info.cpp  ob_ls_server_list.h  ob_server_blacklist.cpp  ob_server_blacklist.h  ob_server_priority.cpp
src/logservice/restoreservice/: ob_log_archive_piece_mgr.cpp  ob_log_archive_piece_mgr.h  ob_log_restore_handler.h  ob_log_restore_net_driver.h  ob_log_restore_service.cpp
src/objit/src/: ob_llvm_helper_stub.cpp
src/observer/: CMakeLists.txt  main.cpp  ob_server.h  ob_server_options.h  ob_srv_xlator_rootserver.cpp
src/pl/: CMakeLists.txt
src/rootserver/: CMakeLists.txt  ob_bootstrap.cpp  ob_create_index_on_empty_table_helper.h  ob_ddl_service.cpp  ob_ddl_service.h  ob_index_builder.cpp  ob_root_service.cpp  ob_root_service.h  ob_rs_rpc_processor.h  ob_tenant_ddl_service.cpp
src/rootserver/fork_table/: ob_fork_table_helper.cpp
src/rootserver/freeze/: ob_major_freeze_helper.cpp  ob_major_freeze_helper.h
src/rootserver/parallel_ddl/: ob_create_index_helper.cpp  ob_create_materialized_view_helper.cpp  ob_create_materialized_view_helper.h  ob_create_table_helper.cpp  ob_create_view_helper.cpp  ob_drop_tablegroup_helper.cpp  ob_htable_ddl_handler.cpp  ob_set_kv_attribute_helper.cpp  ob_table_helper.cpp
src/rootserver/standby/: ob_service_grpc.h
src/share/: CMakeLists.txt  ob_common_rpc_proxy.ipp  ob_ddl_common.cpp  ob_ddl_common.h  ob_debug_sync_point.h  ob_device_manager.cpp  ob_dml_sql_splicer.cpp  ob_dml_sql_splicer.h  ob_event_history_table_operator.h  ob_global_stat_proxy.cpp  ob_global_stat_proxy.h  ob_i_tablet_scan.h  ob_local_device.cpp  ob_local_device.h  ob_max_id_cache.cpp  ob_max_id_fetcher.cpp  ob_rpc_struct.cpp  ob_rpc_struct.h  ob_upgrade_utils.cpp
src/share/change_stream/: ob_change_stream_dispatcher.cpp
src/share/inner_table/: ob_inner_table_schema_def.py
src/share/parameter/: ob_parameter_seed.ipp
src/share/scheduler/: ob_tenant_dag_scheduler.h
src/share/schema/: ob_ddl_sql_service.cpp  ob_ddl_trans_controller.cpp  ob_multi_version_schema_service.cpp  ob_multi_version_schema_service.h  ob_partition_sql_helper.cpp  ob_partition_sql_helper.h  ob_schema_guard_wrapper.cpp  ob_schema_printer.cpp  ob_schema_service.h  ob_schema_service_sql_impl.cpp  ob_schema_service_sql_impl.h  ob_schema_struct.cpp  ob_schema_struct.h  ob_schema_utils.cpp  ob_server_schema_service.cpp  ob_server_schema_service.h  ob_table_schema.h  ob_table_sql_service.cpp  ob_tablegroup_sql_service.cpp
src/share/storage/: ob_deadlock_event_history_table_storage.cpp  ob_deadlock_event_history_table_storage.h  ob_server_event_history_table_storage.cpp  ob_server_event_history_table_storage.h  ob_tenant_event_history_table_storage.cpp  ob_tenant_event_history_table_storage.h
src/share/system_variable/: ob_system_variable.cpp
src/share/vector_index/: ob_plugin_vector_index_adaptor.cpp  ob_plugin_vector_index_adaptor.h  ob_plugin_vector_index_scheduler.cpp  ob_plugin_vector_index_service.cpp  ob_plugin_vector_index_service.h  ob_vector_index_async_task_util.cpp  ob_vector_index_util.cpp  ob_vector_index_util.h
src/sql/: ob_sql_ccl_rule_manager.cpp
src/sql/code_generator/: ob_tsc_cg_service.cpp
src/sql/optimizer/: ob_join_order.cpp  ob_log_table_scan.cpp  ob_log_table_scan.h
src/sql/parser/: non_reserved_keywords_mysql_mode.c  sql_parser_mysql_mode.y
src/sql/privilege_check/: ob_privilege_check.cpp
src/sql/resolver/: ob_resolver.cpp  ob_resolver_utils.cpp
src/storage/: CMakeLists.txt  ob_partition_range_spliter.cpp  ob_partition_range_spliter.h  ob_storage_grpc.cpp  ob_storage_grpc.h
src/storage/access/: ob_block_row_store.h  ob_index_tree_prefetcher.h  ob_index_tree_prefetcher.ipp  ob_multiple_scan_merge.cpp  ob_multiple_scan_merge.h  ob_sstable_row_scanner.h  ob_sstable_row_scanner.ipp  ob_store_row_iterator.h
test/: test_ci
unittest/: CMakeLists.txt  all_tests_main.cpp
unittest/include/: .gitignore  CMakeLists.txt  test_seekdb.cpp
unittest/include/go/: go.mod  test.go  test.sh
unittest/include/go/seekdb/: seekdb.go
unittest/include/nodejs/: package-lock.json  package.json  seekdb.js  test.js  test.sh
unittest/include/nodejs_napi/: binding.gyp  index.js  package-lock.json  package.json  seekdb.cpp  test.js  test.sh
unittest/include/python/: seekdb.py  test.py  test.sh
unittest/include/rust/: Cargo.toml  test.sh
unittest/include/rust/src/: lib.rs  test.rs
unittest/rootserver/: CMakeLists.txt  test_max_id_cache_unittest.cpp
unittest/share/: CMakeLists.txt
unittest/storage/: CMakeLists.txt  test_partition_range_spliter.cpp
(+452 files in other folders)
